--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Local .terraform directories
 **/.terraform/*
 
+# Also omit python compiled files
+**/__pycache__/*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
