--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,14 @@
 FROM python:alpine3.8
 COPY . /app
 WORKDIR /app
-RUN apk --no-cache --update-cache add gcc gfortran build-base libpng freetype
-RUN pip install --upgrade pip Cython
-RUN pip install -r requirements.txt
+
+RUN buildDeps='gcc gfortran build-base libpng freetype wget freetype-dev libpng-dev openblas-dev' \
+    && set -x \
+    && apk --no-cache --update-cache add $buildDeps \
+    && pip install --upgrade pip Cython \
+    && pip install -r requirements.txt \
+    && apk del $buildDeps
+
 EXPOSE 5000
 ENTRYPOINT [ "python" ]
 CMD [ "app.py" ]
