Switching from Alpine to Ubuntu

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,13 +1,8 @@
-FROM python:alpine3.8
+FROM python:slim-buster
 COPY . /app
 WORKDIR /app
 
-RUN buildDeps='gcc gfortran build-base libpng freetype wget freetype-dev libpng-dev openblas-dev' \
-    && set -x \
-    && apk --no-cache --update-cache add $buildDeps \
-    && pip install --upgrade pip Cython \
-    && pip install -r requirements.txt \
-    && apk del $buildDeps
+RUN pip install -r requirements.txt
 
 EXPOSE 5000
 ENTRYPOINT [ "python" ]
